--- a/Notion/Arrays5.html
+++ b/Notion/Arrays5.html
@@ -3,9 +3,11 @@
     <script src="Arrays5.js"></script>
 </head>
 <body>
-    <button onclick="createVector(), isVectorInFomat()">Create Vectors</button>
+    <button onclick="createVectorAndOperator()">Create Vectors</button>
+    <button onclick="isVectorInFormat()">Chech Input Format</button>
     <input type="text" id="vector1">
+    <input type="text" id="operator">
     <input type="text" id="vector2">
-    <button onclick = "calculate()">calculate Vectors</button>
+    <button onclick = "calculate()">Calculate Vectors</button>
     <div id="result"></div>
 </body>
