--- a/Notion/Arrays6.html
+++ b/Notion/Arrays6.html
@@ -2,11 +2,16 @@
 <h1>Das soll Array6 sein</h1>
 <div>Hier sollen 2 Strings entgegengenommen werden, dann in Arrays umgewandelt werden, 
     dann miteinander verrechnet werden und zum Schluss soll das Ergebnis als Array ausgegeben werden</div>
-<body>
-    <button>Create Strings</button>
-    <input type="text">
-    <input type="text">
-    <button>Check Format of Strings</button>
-    <button>Create the Operator</button>
-    <div>Here should be the result</div>
-</body>
+<div>
+    <button onclick = "showInput()">Klicke für die Eingabefelder</button>
+</div>
+<div id="inputField" style="display: none;">
+    <p><input type="text" placeholder="inputField1"></p>
+    <p><input type="text" placeholder="inputField2"></p>
+</div>
+<script>
+    function showInput(){
+    let showInputField = document.getElementById("inputField");
+    inputField.style.display = "block";
+    };
+</script>
